自己紹介をhtmlに追加した。

--- a/template/web-basic/index.html
+++ b/template/web-basic/index.html
@@ -16,7 +16,7 @@
       <p>
         カウント: <span id="count">0</span>
       </p>
-
+      <h1>俺の名前は、竹下じゃ。</h1>
       <!-- クリックするとカウンタを増やすボタンです -->
       <button id="increment" type="button">+1</button>
     </main>
